# lambdex

./: .gitignore  CHANGES.md  Dockerfile  MIGRATING.md  README.md  RELEASE.md  TODO  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml
examples/: example.sh  example_function.py
examples/event_based/: example.sh  example_function.py  requirements.txt
examples/gcp_http/: example.sh  example_http_function.py  requirements.txt
lambdex/: __init__.py  __main__.py  version.py
lambdex/resources/: lambdex_handler.py
scripts/: build-lambdex-pex.py
