[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "lambdex"
author = "The Lambdex developers"
author-email = "pantsbuild@gmail.com"
home-page = "https://github.com/pantsbuild/lambdex"
description-file = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: Unix",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Archiving :: Packaging",
  "Topic :: System :: Software Distribution",
  "Topic :: Utilities",
]
requires = ["pex>=1.1.15"]
requires-python = ">=2.7,<3.10,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*"

[tool.flit.scripts]
lambdex = "lambdex.bin.lambdex:main"

[tool.flit.sdist]
include = ["CHANGES.md"]

[tool.flit.metadata.urls]
Changelog = "https://github.com/pantsbuild/lambdex/blob/main/CHANGES.md"